# jit-aot-course

./: .gitignore  CMakeLists.txt  Makefile  README.md  fibonacci.cpp  ir.cpp  ir.h  operations.h  types.h
include/: domination.h  ir.h  liveInterval.h  live_interval.h  loop.h  operations.h  regalloc.h  types.h  utils.h
src/: CMakeLists.txt  domination.cpp  ir.cpp  liveInterval.cpp  loop.cpp  utils.cpp
test/: CMakeLists.txt  dom_test.cpp  fibonacci.cpp  live_ins_test.cpp  loop_test.cpp  test_regalloc.cpp
